# mtp-sync

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-APACHE-2.0.md
src/: library.rs  main.rs  playlist.rs  track.rs
