[package]
name = "mtp-sync"
version = "0.1.0"
edition = "2021"
license = "ISC OR Apache-2.0"

[dependencies]
anyhow = "1.0.52"
serde = "1.0.132"
toml = "0.5.8"
serde_derive = "1.0.132"
chrono = { version = "0.4.19", features = ["serde"] }
directories = "4.0.1"
clap = "2.34.0"
rayon = "1.5.1"
tokio = "1.15.0"
futures = "0.3.19"
tokio-util = "0.6.9"
cfg-if = "1.0.0"
crossbeam-utils = "0.8.5"
plist = "1.3.1"
gtk4 = "0.4.7"
m3u = "1.0.0"
